Updated to java6 and rc2